src/UI/PlayableWordSearch/PlayableWordSearchComponent.less
@import (reference) "../Styles/Variables.less";

.playable {
    @highlightColor: @accent;
    @margin: calc(@standardMargin / 2);

    display: block;
    user-select: none;
    width: 100%;

    .completed {
        background-color: @highlightColor;
    }

    .pending {
        outline: 2px solid @highlightColor;
    }

    .title {
        text-align: center;
    }

    .win {
        margin-top: @margin;
        text-align: center;
    }

    .wordListContainer {
        margin-top: @margin;
    }

    .wordListWord {
        display: inline-block;
        margin-right: @margin;
    }

    .game { 
        font-weight: 700;
        display: table;
    }

    .row {
        display: table-row;
    }

    .cell {
        display: table-cell;
        text-align: center;
    }
}

